# aescrypt_linux

./: CHANGELOG.md  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
packaging/: CMakeLists.txt  description.txt
src/: CMakeLists.txt  README.md  aescrypt-gui  aescrypt.desktop  aescrypt.desktop.in  aescrypt.xml
