if(aescrypt_linux_INSTALL AND (LINUX OR BSD))
    include(GNUInstallDirs)
    install(PROGRAMS aescrypt-gui DESTINATION ${CMAKE_INSTALL_BINDIR})
    install(FILES aescrypt.desktop DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/applications/)
    install(FILES aescrypt.svg DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/scalable/apps/)
    install(FILES aescrypt_paper.png DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/icons/hicolor/256x256/apps/)
    install(FILES aescrypt.xml DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/mime/packages/)
endif()
